<resources>
    <string name="app_name">Your Government</string>
    <string name="jsonFileName">governmentData.json</string>
    <string name="url_key_fb">fbURL</string>
    <string name="party_unknown">Unknown</string>
    <string name="menu_lbl_location_search">Search Location</string>
    <string name="menu_lbl_info">Information</string>
    <string name="tv_location_hint">Location</string>
    <string name="tv_office_name_hint">Office held</string>
    <string name="tv_official_name_hint">Person Name</string>
    <string name="tv_party_hint">Unknown</string>
    <string name="iv_official_image_hint">Official\'s Image</string>
    <string name="tv_lbl_address">Address:</string>
    <string name="tv_address_data_hint">No Data Provided</string>
    <string name="tv_lbl_phone">Phone:</string>
    <string name="tv_phone_data_hint">No Data Provided</string>
    <string name="tv_lbl_website">Website:</string>
    <string name="tv_lbl_email">Email:</string>
    <string name="ib_lbl_youtube">Youtube Link</string>
    <string name="ib_lbl_google_plus">Google Plus</string>
    <string name="ib_lbl_twitter">Twitter</string>
    <string name="ib_lbl_facebook">Facebook</string>
    <string name="lbl_info_title">Know Your Government</string>
    <string name="lbl_copywrite">\u00A9 2017, Pavan Rao C R</string>
    <string name="lbl_version">Version 1.0</string>
    <string name="dialog_ttl_No_Network">No Network Connection</string>
    <string name="aleart_body_no_network">Data cannot be accessed/loaded without internet connection</string>
    <string name="txt_main_loc_no_network">No Data For Location</string>
    <string name="lbl_ttl_req_loc">Enter City, State or a Zip Code</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="detailObj">OFFICIAL_OBJ</string>
    <string name="social_link_type_youtube">YouTube</string>
    <string name="social_link_type_google">GooglePlus</string>
    <string name="social_link_type_twitter">Twitter</string>
    <string name="social_link_type_facebook">Facebook</string>
    <string name="list_separator">List Separator</string>
    <string name="republican">Republican</string>
    <string name="democratic">Democratic</string>
    <string name="democrate">Democrat</string>
    <string name="apiKey">AIzaSyDy_ZoehQTTfIPbxAu1ZSbeED0ltObDKEM</string>
    <string name="NO_LOC_PROV">No location providers were available</string>
    <string name="SEARCH_MANUAL_MSG">search for any location manually</string>
</resources>
