<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/tv_location_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_loc_official"
        android:contentDescription="@string/tv_location_hint"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        style="@style/locationTextView"/>

    <ScrollView
        android:id="@+id/sv_official_information"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_loc_official"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cl_entire_scroll_view">

            <TextView
                android:text="@string/tv_office_name_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_office_name_official"
                android:gravity="center_horizontal"
                android:contentDescription="@string/tv_office_name_hint"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/tv_official_name_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_official_name_official"
                android:contentDescription="@string/tv_official_name_hint"
                android:gravity="center_horizontal"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/tv_party_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_party"
                android:gravity="center_horizontal"
                android:contentDescription="@string/tv_party_hint" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@drawable/missingimage"
                android:id="@+id/iv_official_image"
                android:contentDescription="@string/iv_official_image_hint"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter"
                android:cropToPadding="false" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:id="@+id/ll_contact_information">

                <!-- This is for the address section -->
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/section_address">

                    <android.support.constraint.Guideline
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/sep_addr_sec"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.3"
                        tools:layout_editor_absoluteY="0dp"
                        tools:layout_editor_absoluteX="0dp" />

                    <TextView
                        android:id="@+id/tv_lbl_address"
                        android:text="@string/tv_lbl_address"
                        android:contentDescription="@string/tv_lbl_address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/sep_addr_sec"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginEnd="8dp"
                        android:gravity="top|end" />

                    <TextView
                        android:text="@string/tv_address_data_hint"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_address_data"
                        android:contentDescription="@string/tv_address_data_hint"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="@+id/sep_addr_sec"
                        android:textStyle="normal|bold" />
                </android.support.constraint.ConstraintLayout>

                <!-- This is for the phone section -->
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/section_phone"
                    app:layout_constraintHorizontal_bias="1.0">

                    <android.support.constraint.Guideline
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sep_phone_sec"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.3"
                        tools:layout_editor_absoluteY="0dp"
                        tools:layout_editor_absoluteX="0dp" />

                    <TextView
                        android:text="@string/tv_lbl_phone"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:id="@+id/tv_lbl_phone"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/sep_phone_sec"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:contentDescription="@string/tv_lbl_address"
                        android:gravity="top|end" />

                    <TextView
                        android:text="@string/tv_phone_data_hint"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_phone_data"
                        android:contentDescription="@string/tv_address_data_hint"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="@+id/sep_phone_sec" />
                </android.support.constraint.ConstraintLayout>

                <!-- This is for the email section -->
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/section_email"
                    app:layout_constraintHorizontal_bias="1.0">

                    <android.support.constraint.Guideline
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sep_email_sec"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.3"
                        tools:layout_editor_absoluteY="0dp"
                        tools:layout_editor_absoluteX="0dp" />

                    <TextView
                        android:text="@string/tv_lbl_email"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:id="@+id/tv_lbl_email"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/sep_email_sec"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:contentDescription="@string/tv_lbl_address"
                        android:gravity="top|end" />

                    <TextView
                        android:text="@string/tv_phone_data_hint"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_email_data"
                        android:contentDescription="@string/tv_address_data_hint"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="@+id/sep_email_sec" />
                </android.support.constraint.ConstraintLayout>

                <!-- This is for the website section -->
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/section_website"
                    app:layout_constraintHorizontal_bias="1.0">

                    <android.support.constraint.Guideline
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sep_website_sec"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.3"
                        tools:layout_editor_absoluteY="0dp"
                        tools:layout_editor_absoluteX="0dp" />

                    <TextView
                        android:text="@string/tv_lbl_website"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:id="@+id/tv_lbl_website"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/sep_website_sec"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:contentDescription="@string/tv_lbl_address"
                        android:gravity="top|end" />

                    <TextView
                        android:text="@string/tv_phone_data_hint"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_website_data"
                        android:contentDescription="@string/tv_address_data_hint"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="@+id/sep_website_sec" />
                </android.support.constraint.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cl_social_links">
                <ImageView
                    android:id="@+id/ib_youtube"
                    android:layout_width="0dp"
                    android:layout_weight="25"
                    app:srcCompat="@drawable/youtube"
                    android:contentDescription="@string/ib_lbl_youtube"
                    android:adjustViewBounds="false"
                    android:scaleType="fitCenter"
                    android:layout_height="75dp"
                    android:visibility="invisible"
                    android:padding="5dp" />

                <ImageView
                    android:id="@+id/ib_google_plus"
                    android:layout_width="0dp"
                    android:layout_weight="25"
                    android:layout_height="75dp"
                    app:srcCompat="@drawable/googleplus"
                    android:contentDescription="@string/ib_lbl_google_plus"
                    android:scaleType="fitCenter"
                    android:visibility="invisible"
                    android:padding="5dp" />

                <ImageView
                    android:id="@+id/ib_twitter"
                    android:layout_width="0dp"
                    android:layout_weight="25"
                    android:layout_height="75dp"
                    app:srcCompat="@drawable/twitter"
                    android:contentDescription="@string/ib_lbl_twitter"
                    android:scaleType="fitCenter"
                    android:visibility="invisible"
                    android:padding="5dp" />

                <ImageView
                    android:id="@+id/ib_facebook"
                    android:layout_width="0dp"
                    android:layout_weight="25"
                    android:layout_height="75dp"
                    app:srcCompat="@drawable/facebook"
                    android:contentDescription="@string/ib_lbl_facebook"
                    android:scaleType="fitCenter"
                    android:visibility="invisible"
                    android:padding="5dp" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>