<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cl_act_information"
    android:background="@drawable/about">

    <TextView
        android:text="@string/lbl_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_info_title"
        android:layout_marginTop="136dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/lbl_info_title"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:theme="@style/Theme.AppCompat.DayNight"
        android:textColor="@color/colorLight"
        android:textStyle="bold" />

    <TextView
        android:text="@string/lbl_copywrite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_copywrite"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_title"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/lbl_copywrite"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:textColor="@color/colorLight" />

    <TextView
        android:text="@string/lbl_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_version"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:contentDescription="@string/lbl_version"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_copywrite"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.19"
        android:textColor="@color/colorLight" />
</android.support.constraint.ConstraintLayout>